--- a/views/personal_mail_employee.xml
+++ b/views/personal_mail_employee.xml
@@ -5,8 +5,8 @@
         <field name="model">hr.employee</field>
         <field name="inherit_id" ref="hr.view_employee_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='private_email']" position="attributes">
-                <attribute name="readonly">False</attribute>
+            <xpath expr="//field[@name='work_email']" position="after">
+                <field name="personal_email" widget="email"/>
             </xpath>
         </field>
     </record>
